<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    tools:context=".Dashboard">


    <EditText
        android:id="@+id/dashboard_eazy_books"
        android:layout_width="313dp"
        android:layout_height="84dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:text="EazyBooks"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <RelativeLayout
        android:layout_width="798dp"
        android:layout_height="1286dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732">

        <at.fhooe.mc.android.eazybooks.SimplePieChart
            android:id="@+id/dashboard_pie_chart"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="98dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </RelativeLayout>

    <EditText
        android:id="@+id/dashboard_year"
        android:layout_width="194dp"
        android:layout_height="79dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:text="Jahr 2023"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_eazy_books"
        app:layout_constraintVertical_bias="0.062" />

    <ImageButton
        android:id="@+id/dashboard_budget"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/dashboard_budget_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_eazy_books"
        app:layout_constraintVertical_bias="0.903"
        app:srcCompat="@drawable/budget" />

    <ImageButton
        android:id="@+id/dashboard_reports"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00F8F8F8"
        android:contentDescription="@string/dashboard_reports_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/dashboard_budget"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        app:srcCompat="@drawable/berichte" />

    <ImageButton
        android:id="@+id/dashboard_transactions"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/dashboard_transactions_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_kategories"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:srcCompat="@drawable/transaktionen" />

    <ImageButton
        android:id="@+id/dashboard_settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/dashboard_settings_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toEndOf="@+id/dashboard_reports"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        app:srcCompat="@drawable/einstellungen" />

    <ImageButton
        android:id="@+id/dashboard_kategories"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/dashboard_kategories_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_budget"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        app:srcCompat="@drawable/kategorien" />

</androidx.constraintlayout.widget.ConstraintLayout>